Don't use Files.writeString()
For some reason, it sometimes fails to convert character encodings
correctly and throws UnmappableCharacterExceptions